@@ -80,13 +80,6 @@ commands=
   py.test -n3 -rfsxX \
         --junitxml={envlogdir}/junit-{envname}.xml []
 
-[testenv:py32]
-deps=py>=1.4.0
-
-[testenv:py33]
-deps=py>=1.4.0
-     :pypi:nose
-
 [testenv:jython]
 changedir=testing
 commands=
